# socaity

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  README_MAGIC_CLIENT  TECHNICAL_README.md  pyproject.toml  requirements.txt  setup.py  test.py
docs/: UseCases.md  dynamic_import_refactoring.md
docs/assets/: banner.html
sdk/: __init__.py
sdk/common/: face2face.py  speechcraft.py
socaity/: __init__.py  __main__.py  api.py  cli.py  cli_apipod.py  cli_auth.py  globals.py  settings.py  socaity_backend_client.py  socaity_service_manager.py  utils.py
socaity/api/: __init__.py  api.py  await_result.py  simple_api.py  utils.py
socaity/core/: Client.py  ClientFactory.py  RequestHandler.py  __init__.py  client_api.py  credentials.py  decorators.py  endpoint.py  job.py  service_client.py  service_client_api.py  socaity_backend_client.py  socaity_service_manager.py  socaity_service_registry.py
socaity/new_registry/: __init__.py  new_registry.py
socaity/registry/: __init__.py  endpoints.py  jobs.py  registry.py  registry_old.py
socaity/sdk/: __init__.py
socaity/socaity_client/: __init__.py  service_client_api.py  utils.py
socaity/utils/: __init__.py  audio.py  image.py  utils.py
test/: example_from_docu.py  test_blip2.py  test_cli.py  test_credentials.py  test_deepseekr1.py  test_face2face.py  test_flux_schnell.py  test_hunyuan_video.py  test_llama3.py  test_models.py  test_sam2.py  test_spechcraft.py  test_tencentarc_photomaker.py  test_upload_replicate.py
tests/: test_client_api.py  test_custom_endpoints.py  test_new_client_api.py  test_simple_api.py
(+1707 files in other folders)
