[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socaity"
version = "0.1.10"
description = "Your SDK and model zoo for generative AI. Build AI-powered applications with ease."
requires-python = ">=3.8"
authors = [
    { name = "SocAIty" }
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "tqdm",
    "httpx",
    "fastsdk>=0.2.8",
    "apipod-registry>=0.0.3",
    "media-toolkit>=00.02.22",
    "singleton_decorator==1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Repository = "https://github.com/SocAIty/socaity"
Homepage = "https://www.socaity.ai"

[project.scripts]
socaity = "socaity.cli:main"
